--- a/src/assets/Commponents/Loggo/Loggo.css
+++ b/src/assets/Commponents/Loggo/Loggo.css
@@ -3,7 +3,7 @@
   justify-content: center;
   border: solid 1px rgb(158, 158, 158);
   border-radius: 20px;
-  width: 300px;
+  width: 30%;
   text-align: center;
 }
 
