--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+:root {
+  --primary-color: #a1db34;
+  --secondary-color: rgb(60, 231, 214);
+  --text-color: rgb(193, 8, 8);
+}
+
 /* #root {
   max-width: 1280px;
   margin: 0 auto;
